--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/home.css" />
+    <link rel="stylesheet" href="css/home.css" />
   </head>
 
   <body>
