--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <a href="#">
           <img
             style="cursor: pointer"
-            src="/Img/namelogo.png"
+            src="Img/namelogo.png"
             alt="My Portfolio"
           />
         </a>
